--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,13 +8,15 @@
     <title>Circular Slider</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
     <div id="container">
+        <div class="price"></div>
+        <div class="sliderContainer"></div>
     </div>
 
-    <div class="price"></div>
-    
     <script src="js/script.js"></script>
 </body>
+
 </html>
